--- a/hexo-theme-dark/layout/_partial/footer.ejs
+++ b/hexo-theme-dark/layout/_partial/footer.ejs
@@ -5,7 +5,7 @@
                 &copy; <%= date(new Date(), 'YYYY') %> <%= config.author || config.title %>
             </div>
             <div class="footer-right">
-                <a href="http://hexo.io/" target="_blank">Hexo</a>  Theme <a href="" target="_blank">dark</a> by ltengy
+                <a href="http://hexo.io/" target="_blank">Hexo</a>  Theme <a href="https://github.com/ltengy/hexo-theme-dark" target="_blank">dark</a> by ltengy
             </div>
         </div>
         <% if (theme.visit_counter.on) { %>
